TAG: qcreports_db-6-0-17-21
DATE: 12/01/2021
STAFF: lec
wts2-735/WF_AP_Discard obsolete/removed

TAG: qcreports_db-6-0-17-20
DATE: 11/30/2021
STAFF: dbm
yaks-394/exclude recombinase reporter assays

TAG: qcreports_db-6-0-17-19
TAG: qcreports_db-6-0-17-18
TAG: qcreports_db-6-0-17-17
TAG: qcreports_db-6-0-17-16
TAG: qcreports_db-6-0-17-15
DATE: 10/29/2021
STAFF: sc
yaks-319 Cell Type QC Report - all CL terms with synonyms
new: mgd/GXD_CellType_Terms.py
tweaks:
    exclude obsolete
    include only exact synonyms
    change syn col hdr to ExactSynonyms

TAG: qcreports_db-6-0-17-14
DATE: 10/28/2021
STAFF: lec
wts2-556/Request for additional GO QC report: under-annotated genes  (TR13434)

TAG: qcreports_db-6-0-17-13
DATE: 10/8/2021
STAFF: dbm
wts2-675/changes to GXD_Images.py

TAG: qcreports_db-6-0-17-12
DATE: 10/7/2021
STAFF: dbm
wts2-682/added BIB_COVRefTagCounts.py and updated qcr.shtml

TAG: qcreports_db-6-0-17-11
DATE: 10/7/2021
STAFF: dbm
wts2-684/changes to GXD_Images.py, GXD_FullCode.py and qcr.shtml

TAG: qcreports_db-6-0-17-10
DATE: 06/21/2021
STAFF: lec
yaks-39/Identify curator contacts for all loads
qcr.shtml updates

TAG: qcreports_db-6-0-17-9
DATE: 06/10/2021
STAFF: lec
b39/451/TR13463/changes to GO QC/MRK_GOIEA.py
got overwritten by TR13349/merge

TAG: qcreports_db-6-0-17-8
TAG: qcreports_db-6-0-17-7
TAG: qcreports_db-6-0-17-6
TAG: qcreports_db-6-0-17-5
DATE: 06/03/2021
STAFF: sc
WTS2-615 - mgd/WF_AP_NewAlleleNomenTag.py - new column: indexed genes
WTS2-614 - mgd/WF_AP_NewAlleleNomenTag.py - new exclusions
WTS2-616 - weekly/WF_AP_Tags.py - new column: indexed genes
WTS2-619 - mgd/WF_AP_IndexingNeeded.py - new report

TAG: qcreports_db-6-0-17-4
TAG: qcreports_db-6-0-17-3
TAG: qcreports_db-6-0-17-2
TAG: qcreports_db-6-0-17-1
DATE: 05/11/2021, 05/20/2021
STAFF: lec
TR13349/Genome Build 39

TAG: qcreports_db-6-0-16-31
DATE: 04/29/2021
STAFF: lec
b39/451/TR13463/changes to GO QC/MRK_GOIEA.py

TAG: qcreports_db-6-0-16-30
DATE: 04/27/2021
STAFF: lec