@@ -41,7 +41,7 @@ be used at times to test reports for <I>future</I> public consumption.)
 <LI><A HREF="/data/reports/qcreports_db/output/BIB_NoAbstract.sql.rpt">References w/ PubMed ID and No Abstract</A> <B>(jeo)</B>
 <LI><A HREF="/data/reports/qcreports_db/output/BIB_DupPM_DOI.sql.rpt">References w/ Duplicated PubMed and DOI IDs</A> <B>(jeo)</B>
 <LI><A HREF="/data/reports/qcreports_db/output/BIB_Duplicates.sql.rpt">References with Duplicate Titles</A> <B>(jeo)</B>
-<LI><A HREF="/data/reports/qcreports_db/output/MRK_BIB_Discard.rpt">MGI Discard References with associated data</A> <B>(jeo, neb)</B>
+<LI><A HREF="/data/reports/qcreports_db/output/MRK_BIB_Discard.sql.rpt">MGI Discard References with associated data</A> <B>(jeo, neb)</B>
 <LI><A HREF="/data/loads/mgi/littriageload/logs/littriageload.error.shtml">Lit Triage Errors</A> <B>(jeo, neb)</B>
 <LI><A HREF="/data/reports/qcreports_db/output/BIB_MissingPDFs.sql.rpt">J#'s missing PDF's</A> <B>(jeo)</B>
 <LI><A HREF="/data/loads/mgi/pdfdownload/logs/identify_missed_papers_plos.sh.log">Overdue PLOS DOI IDs - not in PubMed Central, no longer within timeframe of PLOS downloader</A> <B>(jeo, neb)</B>
